# backend

./: .env.production.example  .gitignore  Cargo.toml  podman-compose.prod.yml
backend/: Cargo.toml  Containerfile
backend/src/: background_tasks.rs  config.rs  error.rs  main.rs
backend/src/api/: auth.rs  devices.rs  mod.rs  prices.rs  rules.rs  schedule.rs
backend/src/db/: mod.rs  models.rs
backend/src/services/: google.rs  mod.rs  pvpc.rs  scheduler.rs
deploy/: README.md  deploy.sh  pvpccheap.service
migrations/: 20240101000001_initial.sql  20240102000001_add_scheduled_actions_unique.sql
shared/: Cargo.toml
shared/src/: lib.rs
