[workspace]
resolver = "2"
members = ["backend", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["crashbit"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Types
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
