[package]
name = "pvpccheap-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Shared types
shared = { path = "../shared" }

# Web framework
actix-web = "4.12.1"
actix-rt = "2.11.0"
actix-cors = "0.7.1"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# HTTP client (per API PVPC)
reqwest = { version = "0.13.1", features = ["json"] }

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
base64 = "0.22.1"

# Configuration
dotenvy = "0.15.7"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web = "0.7.20"
